 * WML engine:
   * now ConditionalWML handles [and], [or], and [not] with in-order precedence
     (this is part of an effort to standardize the behavior of several 
     different types of filters)
   * the syntax for logical OR-filters is now "cond1[or]cond2[/or]" 
     instead of "[or]cond1[/or][or]cond2[/or]"
   * fix a bug where empty conditionals returned false
 * miscellaneous and bug fixes
   * fix renames causing OOS when made after moves or recruits
   * fix a minor glitch when selecting the leftmost menu heading
   * added some extra headers for the upcomming gcc 4.3 (debian bug #417764)
   * fix bug #9398 (attacking units always above defending units)
   * changed the default plague weapon special macro to always spawn a WC

Version 1.3.4:
 * campaigns
   * Two Brothers
     * made the 2nd guards event in scenario 3 depend on if the first answer
       was correct, now the 2nd event triggers later when the first ends in a
       fight
     * added one row of terrain in the 3rd and 4th scenario to make it look
       better with the new "boardgame style"
   * Heir to the Throne
     * edited the maps of the scenarios : "The Elves Besieged", "Blackwater
       Port", "Bay of Pearls", "Crossroads", "The Siege of Elensefar",
       "Dwarven Doors", "The Lost General", "Elven Coucil"
     * adapted the names of the maps and cfgs of the HttT to match the scenario
       identification keys and the and the order of the scenarios
     * added the map of "Cliffs of Thoria"
     * changed one of the Orcish Warlords into a Sovereign and another one into
       a Slurbow for the variety in "Dwarven Doors"
     * fixed the bug that made the undead leader unable to recruit because of a
       misspelled unit type in it's recruit list in "The Lost General"
   * The Rise of Wesnoth
     * added the level 3 outlaws ( Hunter, Outlaw Ranger, Fugitive, Highwayman )
       as a campaign - specific units in The Rise of Wesnoth